--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-import numpy as np                
-import matplotlib.pyplot as plt   
-import seaborn as sns             
-from PIL import Image             
-from ipywidgets import interact_manual  
+numpy               
+matplotlib.pyplot  
+seaborn             
+PIL            
+ipywidgets 
